@@ -75,9 +75,12 @@
                         <argLine>
                         @{argLine} --add-opens gr2232.ui/gr2232.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         </argLine>
+                        <argLine>
+                        @{argLine} --add-opens gr2232.core/gr2232.core=ALL-UNNAMED
+                        </argLine>
                         <skipTests>false</skipTests>
-                        <!--<reuseForks>false</reuseForks>-->
-                        <!--<forkCount>1</forkCount>-->
+                        <reuseForks>true</reuseForks>
+                        <forkCount>1</forkCount>
                     </configuration>
                 </plugin>
 
@@ -128,7 +131,7 @@
                     <artifactId>spotbugs-maven-plugin</artifactId>
                     <version>4.5.0.0</version>
                     <configuration>
-                        <skip>true</skip>
+                        <skip>false</skip>
                         <xmlOutput>false</xmlOutput>
                         <htmlOutput>true</htmlOutput>
                         <excludeFilterFile>config/spotbugs/exclude.xml</excludeFilterFile>
